--- a/catalogo.html
+++ b/catalogo.html
@@ -218,7 +218,7 @@
             <div class="product altoformato">
                 <img src="images/productos/lona.jpg" alt="Lona Impresa">
                 <h3>Lona Impresa</h3>
-                <p class="description">Lona Impresa con Dobles y Ojillos.</p>
+                <p class="description">Impresión de Lona a 720 DPI, con Dobles y Ojillos.</p>
                 <p class="price">$85 MXN</p>
                 <button onclick="window.location.href='https://ejemplo.com/producto1'">Ver más detalles</button>
             </div>
@@ -227,188 +227,188 @@
             <div class="product altoformato">
                 <img src="images/productos/vinil.jpg" alt="Vinil Impreso">
                 <h3>Vinil Impreso</h3>
-                <p class="description">Vinil Impreso en Alta Calidad.</p>
-                <p class="price">$190 MXN</p>
+                <p class="description">Impresion de Vinil Adhesivo en Alta Calidad 1440 DPI</p>
+                <p class="price">$175 MXN</p>
                 <button onclick="window.location.href='https://ejemplo.com/producto2'">Ver más detalles</button>
             </div>
 
             <!-- Producto 3 (Playera Sublimacion) -->
             <div class="product prendas">
                 <img src="images/productos/playerasubli.jpg" alt="Producto 3">
-                <h3>Producto 3</h3>
-                <p class="description">Descripción detallada del Producto 3 (Playera).</p>
-                <p class="price">$900 MXN</p>
+                <h3>Playera Blanca TactoAlgodon Sublimada</h3>
+                <p class="description">Playera de TactoAlgodon BLANCA con Sublimación.</p>
+                <p class="price">$200 MXN</p>
                 <button onclick="window.location.href='https://ejemplo.com/producto3'">Ver más detalles</button>
             </div>
 		
 			<!-- Producto 4 (Playera DTF) -->
             <div class="product prendas">
                 <img src="images/productos/playeradtf.jpg" alt="Producto 3">
-                <h3>Producto 3</h3>
-                <p class="description">Descripción detallada del Producto 3 (Playera).</p>
-                <p class="price">$900 MXN</p>
+                <h3>Playera Estampado DTF</h3>
+                <p class="description">Playera de Algodon, Cualquier Color, con Estampado DTF.</p>
+                <p class="price">$300 MXN</p>
                 <button onclick="window.location.href='https://ejemplo.com/producto3'">Ver más detalles</button>
             </div>
 		
 			<!-- Producto 5 (Playera Vinil) -->
             <div class="product prendas">
                 <img src="images/productos/playeravinil.jpg" alt="Producto 3">
-                <h3>Producto 3</h3>
-                <p class="description">Descripción detallada del Producto 3 (Playera).</p>
-                <p class="price">$900 MXN</p>
+                <h3>Playera Estampado Vinil Textil</h3>
+                <p class="description">Playera de Algodon, Cualquier Color, con Estampado de Vinil Textil.</p>
+                <p class="price">$350 MXN</p>
                 <button onclick="window.location.href='https://ejemplo.com/producto3'">Ver más detalles</button>
             </div>
 			
 			<!-- Producto 6 (Sudadera) -->
             <div class="product prendas">
                 <img src="images/productos/sudadera.jpg" alt="Producto 3">
-                <h3>Producto 3</h3>
-                <p class="description">Descripción detallada del Producto 3 (Playera).</p>
-                <p class="price">$900 MXN</p>
+                <h3>Sudadera Estampado DTF</h3>
+                <p class="description">Sudadera de Algodon con Capucha y Cangurera, Cualquier Color, con Estampado DTF</p>
+                <p class="price">$580 MXN</p>
                 <button onclick="window.location.href='https://ejemplo.com/producto3'">Ver más detalles</button>
             </div>
 			
 			<!-- Producto 5 (Playera Vinil) -->
             <div class="product prendas">
                 <img src="images/productos/gorramalla.jpg" alt="Producto 3">
-                <h3>Producto 3</h3>
-                <p class="description">Descripción detallada del Producto 3 (Playera).</p>
-                <p class="price">$900 MXN</p>
+                <h3>Gorra Malla Sublimada</h3>
+                <p class="description">Gorra de Mallado, Cualquier Color, Con Sublimación al Frente.</p>
+                <p class="price">$100 MXN</p>
                 <button onclick="window.location.href='https://ejemplo.com/producto3'">Ver más detalles</button>
             </div>
 			
 			<!-- Producto 5 (Playera Vinil) -->
             <div class="product prendas">
                 <img src="images/productos/gorradtf.jpg" alt="Producto 3">
-                <h3>Producto 3</h3>
-                <p class="description">Descripción detallada del Producto 3 (Playera).</p>
-                <p class="price">$900 MXN</p>
+                <h3>Gorra Estampado DTF</h3>
+                <p class="description">Gorra de Acrilan o Plana, Cualquier Color, Con Estampado DTF.</p>
+                <p class="price">$130 MXN</p>
                 <button onclick="window.location.href='https://ejemplo.com/producto3'">Ver más detalles</button>
             </div>
 			
 			<!-- Producto 5 (Playera Vinil) -->
             <div class="product taza">
                 <img src="images/productos/taza.jpg" alt="Producto 3">
-                <h3>Producto 3</h3>
-                <p class="description">Descripción detallada del Producto 3 (Playera).</p>
-                <p class="price">$900 MXN</p>
+                <h3>Taza Sublimada 11oz</h3>
+                <p class="description">Taza Blanca de 11Oz. con Sublimación.</p>
+                <p class="price">$75 MXN</p>
                 <button onclick="window.location.href='https://ejemplo.com/producto3'">Ver más detalles</button>
             </div>
 			
 			<!-- Producto 5 (Playera Vinil) -->
             <div class="product taza">
                 <img src="images/productos/tazamagica.jpg" alt="Producto 3">
-                <h3>Producto 3</h3>
-                <p class="description">Descripción detallada del Producto 3 (Playera).</p>
-                <p class="price">$900 MXN</p>
+                <h3>Taza Magica Sublimada 11oz</h3>
+                <p class="description">Taza Magica de 11Oz. SE REVELA CON AGUA CALIENTE, con Sublimación.</p>
+                <p class="price">$130 MXN</p>
                 <button onclick="window.location.href='https://ejemplo.com/producto3'">Ver más detalles</button>
             </div>
 			
 			<!-- Producto 5 (Playera Vinil) -->
             <div class="product taza">
                 <img src="images/productos/tarro.jpg" alt="Producto 3">
-                <h3>Producto 3</h3>
-                <p class="description">Descripción detallada del Producto 3 (Playera).</p>
-                <p class="price">$900 MXN</p>
+                <h3>Tarro Satinado Cervecero</h3>
+                <p class="description">Tarro Satinado estilo Cervezero con Sublimación.</p>
+                <p class="price">$200 MXN</p>
                 <button onclick="window.location.href='https://ejemplo.com/producto3'">Ver más detalles</button>
             </div>
 			
 			<!-- Producto 5 (Playera Vinil) -->
             <div class="product taza">
                 <img src="images/productos/botellapopote.jpg" alt="Producto 3">
-                <h3>Producto 3</h3>
-                <p class="description">Descripción detallada del Producto 3 (Playera).</p>
-                <p class="price">$900 MXN</p>
+                <h3>Botella de Aluminio con Popote 500ml.</h3>
+                <p class="description">Botella Lata de Acero con Popote Blanco de 500ml. con Sublimacion.</p>
+                <p class="price">$350 MXN</p>
                 <button onclick="window.location.href='https://ejemplo.com/producto3'">Ver más detalles</button>
             </div>
 			
 			<!-- Producto 5 (Playera Vinil) -->
             <div class="product taza">
                 <img src="images/productos/botella.jpg" alt="Producto 3">
-                <h3>Producto 3</h3>
-                <p class="description">Descripción detallada del Producto 3 (Playera).</p>
-                <p class="price">$900 MXN</p>
+                <h3>Botella de Aluminio 600ml.</h3>
+                <p class="description">Botella de Aluminio en Blanco Perla o Plateado, con Sublimacion.</p>
+                <p class="price">$270 MXN</p>
                 <button onclick="window.location.href='https://ejemplo.com/producto3'">Ver más detalles</button>
             </div>
 			
 			<!-- Producto 5 (Playera Vinil) -->
             <div class="product volantes">
                 <img src="images/productos/volantes/Volante1-24x1.jpg" alt="Producto 3">
-                <h3>Producto 3</h3>
-                <p class="description">Descripción detallada del Producto 3 (Playera).</p>
-                <p class="price">$900 MXN</p>
+                <h3>Millar de Volantes | 1/2 | 4x1</h3>
+                <p class="description">1 Millar de Volantes Couche 115grs. Tamaño Media Carta (19.7 x 13.6cm) Frente a Color y Atras en Blanco y Negro.</p>
+                <p class="price">$720 MXN</p>
                 <button onclick="window.location.href='https://ejemplo.com/producto3'">Ver más detalles</button>
             </div>
 			
 			<!-- Producto 5 (Playera Vinil) -->
             <div class="product volantes">
                 <img src="images/productos/volantes/Volantes1-44x1.jpg" alt="Producto 3">
-                <h3>Producto 3</h3>
-                <p class="description">Descripción detallada del Producto 3 (Playera).</p>
-                <p class="price">$900 MXN</p>
+                <h3>Millar de Volantes | 1/4 | 4x1</h3>
+                <p class="description">1 Millar de Volantes Couche 115grs. Tamaño Un Cuarto (9.7 x 13.6cm) Frente a Color y Atras en Blanco y Negro.</p>
+                <p class="price">$360 MXN</p>
                 <button onclick="window.location.href='https://ejemplo.com/producto3'">Ver más detalles</button>
             </div>
 			
 			<!-- Producto 5 (Playera Vinil) -->
             <div class="product volantes">
                 <img src="images/productos/volantes/Volantes1-24x4.jpg" alt="Producto 3">
-                <h3>Producto 3</h3>
-                <p class="description">Descripción detallada del Producto 3 (Playera).</p>
-                <p class="price">$900 MXN</p>
+                <h3>Millar de Volantes | 1/2 | 4x4</h3>
+                <p class="description">1 Millar de Volantes Couche 115grs. Tamaño Media Carta (19.7 x 13.6cm) Ambos lados a Color.</p>
+                <p class="price">$940 MXN</p>
                 <button onclick="window.location.href='https://ejemplo.com/producto3'">Ver más detalles</button>
             </div>
 			
 			<!-- Producto 5 (Playera Vinil) -->
             <div class="product volantes">
                 <img src="images/productos/volantes/Volantes1-44x4.jpg" alt="Producto 3">
-                <h3>Producto 3</h3>
-                <p class="description">Descripción detallada del Producto 3 (Playera).</p>
-                <p class="price">$900 MXN</p>
+                <h3>Millar de Volantes | 1/4 | 4x4</h3>
+                <p class="description">1 Millar de Volantes Couche 115grs. Tamaño Un Cuarto (9.7 x 13.6cm) Ambos lados a Color.</p>
+                <p class="price">$470 MXN</p>
                 <button onclick="window.location.href='https://ejemplo.com/producto3'">Ver más detalles</button>
             </div>
 			
 			<!-- Producto 5 (Playera Vinil) -->
             <div class="product volantes">
                 <img src="images/productos/volantes/VolanteBond1-2.jpg" alt="Producto 3">
-                <h3>Producto 3</h3>
-                <p class="description">Descripción detallada del Producto 3 (Playera).</p>
-                <p class="price">$900 MXN</p>
+                <h3>Millar de Volantes BOND | 1/2 | 4X0</h3>
+                <p class="description">1 Millar de Volantes Bond 90grs. Tamaño Media Carta (19.7 x 13.6cm) Frente SOLO A Color o Blanco y Negro</p>
+                <p class="price">$680 MXN</p>
                 <button onclick="window.location.href='https://ejemplo.com/producto3'">Ver más detalles</button>
             </div>
 			
 			<!-- Producto 5 (Playera Vinil) -->
             <div class="product volantes">
                 <img src="images/productos/volantes/VolanteBond1-4.jpg" alt="Producto 3">
-                <h3>Producto 3</h3>
-                <p class="description">Descripción detallada del Producto 3 (Playera).</p>
-                <p class="price">$900 MXN</p>
+                <h3>Millar de Volantes BOND | 1/4 | 4x0</h3>
+                <p class="description">1 Millar de Volantes Bond 90grs. Tamaño Un Cuarto (9.7 x 13.6cm) Frente SOLO A Color o Blanco y Negro</p>
+                <p class="price">$340 MXN</p>
                 <button onclick="window.location.href='https://ejemplo.com/producto3'">Ver más detalles</button>
             </div>
 			
 			<!-- Producto 5 (Playera Vinil) -->
             <div class="product tarjetas">
                 <img src="images/productos/tarjetas/laminado.jpg" alt="Producto 3">
-                <h3>Producto 3</h3>
-                <p class="description">Descripción detallada del Producto 3 (Playera).</p>
-                <p class="price">$900 MXN</p>
+                <h3>Millar de Tarjetas de Presentacion Laminado | 4x4</h3>
+                <p class="description">1 Millar de Tarjetas de Presentacion Couche 300grs. de 8.1 x 4.4cm, Con acabado LAMINADO POR AMBOS LADOS, Ambos lados a Color</p>
+                <p class="price">$450 MXN</p>
                 <button onclick="window.location.href='https://ejemplo.com/producto3'">Ver más detalles</button>
             </div>
 			
 			<!-- Producto 5 (Playera Vinil) -->
             <div class="product tarjetas">
                 <img src="images/productos/tarjetas/barnizado.jpg" alt="Producto 3">
-                <h3>Producto 3</h3>
-                <p class="description">Descripción detallada del Producto 3 (Playera).</p>
-                <p class="price">$900 MXN</p>
+                <h3>Millar de Tarjetas de Presentacion Barnizado | 4x1 o 4x0 </h3>
+                <p class="description">1 Millar de Tarjetas de Presentacion Couche 300grs. de 8.1 x 4.4cm, Con acabado BARNIZADO POR ENFRENTE, Frente a Color y Atras Blanco y Negro o Vacio</p>
+                <p class="price">$280 MXN</p>
                 <button onclick="window.location.href='https://ejemplo.com/producto3'">Ver más detalles</button>
             </div>
 			
 			<!-- Producto 5 (Playera Vinil) -->
             <div class="product tarjetas">
                 <img src="images/productos/tarjetas/100tarjetas.jpg" alt="Producto 3">
-                <h3>Producto 3</h3>
-                <p class="description">Descripción detallada del Producto 3 (Playera).</p>
-                <p class="price">$900 MXN</p>
+                <h3>100 Tarjetas de Presentacion Couche | 4x0</h3>
+                <p class="description">100 Tarjetas de Presentacion en Couche 300grs. FRENTE SOLO A COLOR O BLANCO Y NEGRO, </p>
+                <p class="price">$100 MXN</p>
                 <button onclick="window.location.href='https://ejemplo.com/producto3'">Ver más detalles</button>
             </div>
         </div>
